@@ -36,9 +36,11 @@
     <metal:define define-macro="map-widget"
                   tal:define="cgmap nocall:cgmap | nothing;
                               mapwidgets view/@@collectivegeo-maps/mapwidgets;
-                              cgmap python:cgmap or mapwidgets[0]">
-      <div id="map" class="widget-cgmap" tal:attributes="id cgmap/mapid | string:map;
-                           class cgmap/klass | string:widget-cgmap">
+                              cgmap python:cgmap or mapwidgets[0];">
+      <div id="map" class="widget-cgmap"
+           tal:attributes="id cgmap/mapid | string:map;
+                           class cgmap/klass | string:widget-cgmap;
+                           style context/@@collectivegeo-macros/map_inline_css;">
         <!--   openlayers map     -->
       </div>
       <script type="text/javascript"
