@@ -22,6 +22,13 @@
         />
 
     <browser:page
+        name="geofeaturestyle-view"
+        for="*"
+        class=".geofeaturestyle_view.GeoFeatureStyleView"
+        permission="zope2.View"
+        />
+
+    <browser:page
         name="collectivegeo-macros"
         for="*"
         class=".collectivegeo_macros.CollectiveGeoMacros"
